  - Potential fix for being show "Not registered." when attempting to rename a town.
0.96.7.10:
  - Fix TownyWorld setting a town's world when a town is added to a townyworld.
  - Inn Plots no longer turn switch perms on for all groups, instead it uses the TownBlockOwner's perm line like most plot types.
  - Fix reclamation cost confirmation not being sent to the player using the /t reclaim command.
  - New Command: /ta town TOWNNAME unruin
    - Closes #4824.
0.96.7.11:
  - Fix HangingEntity placement all using Painting material for permission tests.
  - API: Add a TownKickEvent, courtesy of Warriorrrr with PR #4831.
  - Fix Spawn Point particles not disappearing when spawn points are moved.
    - Closes #4830.
  - Fix formatted balance for not enough money error, courtesy of Warriorrrr with PR #4833.
  - Fix not using the filteredname earlier on when a town is made. 
  - API: Add NationKingChangeEvent and TownMayorChangeEvent, courtesy of Warriorrrr with PR #4834.
  - Small refactor of the bank balance caching. 
  - Placeholder: %townyadvanced_player_location_plot_name%
    - Displays a plot's name if it has one.
  - Add townyadmin command for adding/removing nation allies or enemies, courtesy of Warriorrrr with PR #4826
  - New Commands:
    - /ta nation NATIONNAME ally [add|remove] NATIONNAME
    - /ta nation NATIONNAME enemy [add|remove] NATIONNAME
  - New Permission nodes:
    - towny.command.townyadmin.nation.enemy
    - towny.command.townyadmin.nation.ally
    - both are child nodes of towny.command.townyadmin.nation and therefore you will not need to add these (in most situations.)
0.96.7.12:
  - Swedish translation, added courtesy of OskyEdz with PR #4840.
  - Lower CreatureSpawnEvent priority to make Towny play nice with EliteMobs and not be the worst.
  - Fix unclaimedZoneIgnoreIds not working properly.
    - Closes #4844.
  - Fix personally-owned plots not taking on a fully-open perm line when a town is ruined.
    - Closes #4846.