@@ -5949,3 +5949,4 @@ v0.92.0.11:
     - Closes #4844.
   - Fix personally-owned plots not taking on a fully-open perm line when a town is ruined.
     - Closes #4846.
+  - Fix missing confirmation for admins using /t delete NAME and /n delete NAME.
